# igia

./: .gitignore  AUTHORS.rst  LICENSE.txt  README.md  README.rst  requirements.txt  setup.cfg  setup.py
igia/: GVAR.py  __init__.py  cluster.py  coverage.py  debug_igia.py  element.py  linkage.py  mpi4igia.py  skeleton.py  transcript.py  utils.py
tests/: conftest.py  demo.sh  example.sh  test_annotation.py  test_cluster.py  test_element.py  test_linkage.py  test_transcript.py  test_utils.py
tests/data/: Anther.sort.bam.bai  Bract.sort.bam.bai  Cotyledon.sort.bam.bai  Flower-0DPA.sort.bam.bai  Ovule-0DPA.sort.bam.bai  Ovule-10DPA.sort.bam.bai  Ovule-20DPA.sort.bam.bai  Ovule-5DPA.sort.bam.bai  Petal.sort.bam.bai  Petiole.sort.bam.bai  Phloem.sort.bam.bai  Seed.sort.bam.bai  Seedling_root.sort.bam.bai  Seedling_stem.sort.bam.bai  Sepal.sort.bam.bai  Stamen.sort.bam.bai  TES.csv  TSS.csv  all_fixed_star.sort.bam  all_fixed_star.sort.bam.bai  ann.bed12  build_test_set.py  build_test_set.sh  chrom.sizes  genemark_cds.gff  genemark_gene.bed12  genome.fa  genome.fa.fai  part_NGS.bam  part_NGS.bam.bai  part_NGS.sam  part_TGS.bam  part_TGS.bam.bai  part_TGS.sam  test_loc.csv
tests/igia_demo_expected/: internal_exon.bed6  intron.bed6  isoC.bed12  isoF.bed12  isoM.bed12  isoP.bed12  isoR.bed12  tes_exon.bed6  tss_exon.bed6
tests/igia_res_expected/: internal_exon.bed6  intron.bed6  isoC.bed12  isoF.bed12  isoM.bed12  isoP.bed12  isoR.bed12  tes_exon.bed6  tss_exon.bed6
