[metadata]
name = igia
summary = Integrative Gene Isoform Assembler
author = Dehe Wang, Yu Zhou
author-email = wangdehe@whu.edu.cn, yu.zhou@whu.edu.cn
license = MIT
description-file = README.rst
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python

[entry_points]
# Add here console scripts like:
console_scripts =
    igia = igia.skeleton:run
    igiampi = igia.mpi4igia:run
    igia_debug = igia.debug_igia:run

[files]
packages =
    igia
data_files =
    share/igia_docs = docs/*

[extras]

[test]
# py.test options when running `python setup.py test`
addopts = tests

[tool:pytest]
addopts =
    --cov igia --cov-report term-missing
    --verbose

[aliases]
docs = build_sphinx

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[pbr]
autodoc_tree_index_modules = True

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
